--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@ header("content-type:text/html;charset=utf-8");
 	<link rel="stylesheet" type="text/css" href="css/swiper-3.4.1.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/index.css">
-	<title>自己练习微网站</title>	
+	<title>微网站</title>
 </head>
 <body>
 <div class="box">
