--- a/index1.html
+++ b/index1.html
@@ -321,7 +321,7 @@
         scrollingSpeed:500,        //每一屏的速度
         scrollOverflow:true,       //超出之后是否有滚动条
         keyboardScrolling:true,    //使用键盘的上下箭头来控制翻页
-        sectionsColor:['red','blue','green','pink','black','pink','pink','red'],
+        //sectionsColor:['red','blue','green','pink','black','pink','pink','red'],
         css3:true,       //是否使用css3动画
         loopHorizontal:false,//对于左右幻灯片的指示箭头到最后或是最后一页的时候隐藏那个箭头
         autoScrolling:true,//是否使用全屏滚动 默认true
